# despoof

./: .gitignore  CMakeLists.txt  COPYING.rtf  COPYING.txt  README.markdown  despoof.props  despoof.sln
common/: CMakeLists.txt  argtable.cpp  folders.cpp  utf_argv.cpp
common-log/: CMakeLists.txt  logger-util.cpp
common-nw/: CMakeLists.txt  common_network_interface.cpp  interface_change_listener.cpp  notify_addr_change_listener.h
despoof/: CMakeLists.txt  adapter_address.h  command_line.cpp  command_line.h  configuration.cpp  configuration.h  context.cpp  context.h  corelogic.h  default_main.cpp  despoof.vcxproj  despoof.vcxproj.filters  init.cpp  init.h  iterate.cpp  log.cpp  log.h  logger.cpp  logger.h  main.cpp  reload.cpp  reload.h  service_main.cpp  targetwindows.h
despoof-svctool/: CMakeLists.txt  command_line.cpp  command_line.h  commmon_operations.cpp  configuration.cpp  configuration.h  install.cpp  main.cpp  operations.h  start.cpp  stop.cpp  uninstall.cpp
include/despoof/: argtable.h  command_line.h  config.h  folders.h  import.h  logger-util.h  logger.h  loglevels.h  network_api.h  network_interface.h  reference_type.h  string.h  utf_argv.h
include/despoof/common-nw/: common_network_api.h  (+2 more)
installer/: installer.sln
installer/installer/: config.nsh  functions.nsh  installer.nsi  installer.vcxproj  installer.vcxproj.filters
log-console/: CMakeLists.txt  log-console.vcxproj  log-console.vcxproj.filters  log.cpp
log-file/: CMakeLists.txt  log.cpp
network_interface-win32/: collect.cpp  network_interface-win32.vcxproj  network_interface_implementation.h
nw-pcap/: CMakeLists.txt  network_interface_implementation.cpp  network_interface_implementation.h  pcap_exception.h
nw-sendarp/: CMakeLists.txt  collect.cpp  getapi.cpp  network_api_implementation.cpp  network_api_implementation.h  network_interface_implementation.cpp  network_interface_implementation.h  nw-sendarp.vcxproj  nw-sendarp.vcxproj.filters
test/: CMakeLists.txt  main.cpp
test/common/: CMakeLists.txt  utf_argv_test.cpp
test/win32support/: CMakeLists.txt  abortable_test.cpp  error_test.cpp
win32support/: CMakeLists.txt  abortable.cpp  error.cpp  folders.cpp  win32support.vcxproj  win32support.vcxproj.filters
(+6 files in other folders)
